<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="en">
    <string name="app_name">SimpleBrowser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="WebsitesNames">
        <item>@string/Masrawy</item>
        <item>@string/SadaElbalad</item>
        <item>@string/AlyoumAlsab3</item>
        <item>@string/Alwatan</item>
        <item>@string/ChatAraby</item>
        <item>@string/Dndnha</item>
        <item>@string/_1337X</item>
        <item>@string/ThePirateBay</item>
        <item>@string/Akoam</item>
        <item>@string/Cima4film</item>
        <item>@string/Cimaclub</item>
        <item>@string/EgyBest</item>
        <item>@string/Sam3na</item>
        <item>@string/SoundCloud</item>
        <item>@string/Na5mElarab</item>
        <item>@string/Nogomi</item>
        <item>@string/La7nAraby</item>
        <item>@string/Na5matSongs</item>
        <item>@string/AlmasryAlyom</item>
        <item>@string/Alahram</item>
        <item>@string/Veto</item>
        <item>@string/A5barAlyom</item>
        <item>@string/A5barakNet</item>
        <item>@string/Al7akAldlal</item>
        <item>@string/IMDB</item>
        <item>@string/HelmAldrama</item>
        <item>@string/Netflix</item>
        <item>@string/Rotten</item>
        <item>@string/Karton</item>
        <item>@string/Mosar3aOnline</item>
        <item>@string/Filgoal</item>
        <item>@string/Yallashot</item>
        <item>@string/FantasyPL</item>
        <item>@string/El_Ahly</item>
        <item>@string/El_Zamalk</item>
        <item>@string/Goal.com</item>
        <item>@string/EslamWeb</item>
        <item>@string/TareekAlesalm</item>
        <item>@string/EbnBaz</item>
        <item>@string/SaidAlfoaad</item>
        <item>@string/Mos7afAlectrony</item>
        <item>@string/MoaqitAlslaa</item>
        <item>@string/ChatAraby</item>
        <item>@string/ChatKlamangy</item>
        <item>@string/ArabChat</item>
        <item>@string/ChatRandom</item>
        <item>@string/Twitch.tv</item>
        <item>@string/Spotify</item>
        <item>@string/Facebook</item>
        <item>@string/Twitter</item>
        <item>@string/Instagram</item>
        <item>@string/WhatsApp</item>
        <item>@string/Blogger</item>
        <item>@string/Tagged</item>
        <item>@string/BankAlahly</item>
        <item>@string/BankMisr</item>
        <item>@string/CIB</item>
        <item>@string/QNB</item>
        <item>@string/HSBCEgypt</item>
        <item>@string/Paypal</item>
        <item>@string/Wikipedia</item>
        <item>@string/Alm3any</item>
        <item>@string/Mawdo3</item>
        <item>@string/Esalny</item>
        <item>@string/WikiHow</item>
        <item>@string/HmsatYmania</item>
        <item>@string/Wuzzuf</item>
        <item>@string/Forsna</item>
        <item>@string/Wazaef</item>
        <item>@string/Bayt</item>
        <item>@string/Almehan</item>
        <item>@string/Wazayf4u</item>
        <item>@string/Wattpad</item>
        <item>@string/_3seerAlkotob</item>
        <item>@string/Goodreads</item>
        <item>@string/InternetArchive</item>
        <item>@string/BooksPdf</item>
        <item>@string/Wuxiaoworld</item>
        <item>@string/McDonaldsEgypt</item>
        <item>@string/Otlob</item>
        <item>@string/KFCEgypt</item>
        <item>@string/PizzaHutEgypt</item>
        <item>@string/Cookpad</item>
        <item>@string/MenuEgypt</item>
        <item>@string/Vezeeta</item>
        <item>@string/Shezlong</item>
        <item>@string/WebTeb</item>
        <item>@string/MayoClinic</item>
        <item>@string/AlKonsolto</item>
        <item>@string/Estshary</item>
        <item>@string/Parents</item>
        <item>@string/WhatToExpect</item>
        <item>@string/MomJunction</item>
        <item>@string/Pampers</item>
        <item>@string/JOHNSONSbaby</item>
        <item>@string/TheBump</item>
        <item>@string/Mobizle</item>
        <item>@string/Fast.com</item>
        <item>@string/Qa3tAlmobilat</item>
        <item>@string/Outlook.com</item>
        <item>@string/Huawei</item>
        <item>@string/Microsoft</item>
        <item>@string/HM</item>
        <item>@string/Zara</item>
        <item>@string/Bershka</item>
        <item>@string/Sephora</item>
        <item>@string/Modanisa</item>
        <item>@string/PullBear</item>
        <item>@string/Egyptair</item>
        <item>@string/GoogleMaps</item>
        <item>@string/TripAdvisor</item>
        <item>@string/Wego</item>
        <item>@string/Holidaycheck</item>
        <item>@string/Flyin</item>
        <item>@string/Amazon</item>
        <item>@string/Jumia</item>
        <item>@string/Noun</item>
        <item>@string/eBay</item>
        <item>@string/MobileShop</item>
        <item>@string/_2B</item>
        <item>@string/Gmail</item>
        <item>@string/GooglePlay</item>
        <item>@string/GoogleDrive</item>
        <item>@string/GoogleTranslate</item>
        <item>@string/YahooMail</item>
        <item>@string/Dropbox</item>
        <item>@string/Shfaf</item>
        <item>@string/Edarabia</item>
        <item>@string/Edrak</item>
        <item>@string/Malzamty</item>
        <item>@string/Coursera</item>
        <item>@string/Udemy</item>
    </string-array>
    <string-array name="AppsNames">
        <item>@string/Truecaller</item>
        <item>@string/Skype</item>
        <item>@string/Messenger</item>
        <item>@string/Facebook</item>
        <item>@string/WhatsApp</item>
        <item>@string/Instagram</item>
        <item>@string/VideoDownloaderInShot</item>
        <item>@string/AdvancedDownloadManager</item>
        <item>@string/FacebookDownload</item>
        <item>@string/DownloadAllFiles</item>
        <item>@string/DownloadTwitterVideos</item>
        <item>@string/UCBrowser</item>
        <item>@string/Spotify</item>
        <item>@string/GooglePlayMusic</item>
        <item>@string/YouTubeMusic</item>
        <item>@string/SamsungMusic</item>
        <item>@string/SoundCloud</item>
        <item>@string/Anghami</item>
        <item>@string/AlmasryAlyom</item>
        <item>@string/Alahram</item>
        <item>@string/Veto</item>
        <item>@string/BBCNews</item>
        <item>@string/CNN</item>
        <item>@string/Scooper</item>
        <item>@string/IMDB</item>
        <item>@string/Netflix</item>
        <item>@string/Viki</item>
        <item>@string/Rotten</item>
        <item>@string/BabyTV</item>
        <item>@string/Youtube</item>
        <item>@string/Filgoal</item>
        <item>@string/Yallashot</item>
        <item>@string/FantasyPL</item>
        <item>@string/Goal.com</item>
        <item>@string/LFCTVGO</item>
        <item>@string/RealmadridApp</item>
        <item>@string/EslamWeb</item>
        <item>@string/MuslimPro</item>
        <item>@string/EgyptsDarAlIfta</item>
        <item>@string/HollyQuran</item>
        <item>@string/Salatuk</item>
        <item>@string/Azhar.eg</item>
        <item>@string/Steam</item>
        <item>@string/Twitch.tv</item>
        <item>@string/Dailymotion</item>
        <item>@string/Oculus</item>
        <item>@string/OSNStreaming</item>
        <item>@string/RandoChat</item>
        <item>@string/TikTok</item>
        <item>@string/Telegram</item>
        <item>@string/Snapchat</item>
        <item>@string/LinkedIn</item>
        <item>@string/Facebook</item>
        <item>@string/WhatsApp</item>
        <item>@string/BankAlahly</item>
        <item>@string/BankMisr</item>
        <item>@string/CIB</item>
        <item>@string/QNB</item>
        <item>@string/HSBCEgypt</item>
        <item>@string/Paypal</item>
        <item>@string/Wikipedia</item>
        <item>@string/Citationsy</item>
        <item>@string/Mawdo3</item>
        <item>@string/Esalny</item>
        <item>@string/WikiHow</item>
        <item>@string/OxfordDictionary</item>
        <item>@string/Waseet</item>
        <item>@string/Forsna</item>
        <item>@string/Upwork</item>
        <item>@string/Bayt</item>
        <item>@string/Glassdoor</item>
        <item>@string/Tanqeeb</item>
        <item>@string/Wattpad</item>
        <item>@string/AmazonKindle</item>
        <item>@string/Goodreads</item>
        <item>@string/WaybackMachine</item>
        <item>@string/Storytel</item>
        <item>@string/Wuxiaoworld</item>
        <item>@string/McDonaldsEgypt</item>
        <item>@string/Otlob</item>
        <item>@string/KFCEgypt</item>
        <item>@string/PizzaHutEgypt</item>
        <item>@string/Cookpad</item>
        <item>@string/Talabat</item>
        <item>@string/Vezeeta</item>
        <item>@string/Shezlong</item>
        <item>@string/MiFit</item>
        <item>@string/MayoClinic</item>
        <item>@string/AlKonsolto</item>
        <item>@string/AdidasRunning</item>
        <item>@string/BabyMonitor3G</item>
        <item>@string/WhatToExpect</item>
        <item>@string/BabySparks</item>
        <item>@string/Pampers</item>
        <item>@string/Kinedu</item>
        <item>@string/TheBump</item>
        <item>@string/MyWE</item>
        <item>@string/Fast.com</item>
        <item>@string/Speedtest</item>
        <item>@string/MicrosoftOutlook</item>
        <item>@string/Huawei</item>
        <item>@string/Microsoft</item>
        <item>@string/HM</item>
        <item>@string/Zara</item>
        <item>@string/Bershka</item>
        <item>@string/TownTeam</item>
        <item>@string/Modanisa</item>
        <item>@string/PullBear</item>
        <item>@string/Booking</item>
        <item>@string/GoogleMaps</item>
        <item>@string/TripAdvisor</item>
        <item>@string/Wego</item>
        <item>@string/Holidaycheck</item>
        <item>@string/Flyin</item>
        <item>@string/Amazon</item>
        <item>@string/Jumia</item>
        <item>@string/Noun</item>
        <item>@string/eBay</item>
        <item>@string/B.TECH</item>
        <item>@string/Souq</item>
        <item>@string/Gmail</item>
        <item>@string/SHAREit</item>
        <item>@string/GoogleDrive</item>
        <item>@string/AdobeAcrobatReader</item>
        <item>@string/VNVideo</item>
        <item>@string/Dropbox</item>
        <item>@string/UDictionary</item>
        <item>@string/Cambly</item>
        <item>@string/Edrak</item>
        <item>@string/Duolingo</item>
        <item>@string/Coursera</item>
        <item>@string/Udemy</item>
    </string-array>
    <string-array name="CategoryWebsites">
        <item>@string/Top</item>
        <item>@string/Download</item>
        <item>@string/Music</item>
        <item>@string/News</item>
        <item>@string/Video</item>
        <item>@string/Sports</item>
        <item>@string/Religion</item>
        <item>@string/Entertainment</item>
        <item>@string/Social</item>
        <item>@string/Finance</item>
        <item>@string/Reference</item>
        <item>@string/Job</item>
        <item>@string/Books</item>
        <item>@string/Food</item>
        <item>@string/Health</item>
        <item>@string/Parenting</item>
        <item>@string/Technology</item>
        <item>@string/Fashion</item>
        <item>@string/Travel</item>
        <item>@string/Shopping</item>
        <item>@string/Tools</item>
        <item>@string/Education</item>
    </string-array>
    <string name="general_cat">GENERAL</string>
    <string name="searchengine_txt">SearchEngine</string>
    <string name="language_txt">Language</string>
    <string name="fontsize_txt">FontSize</string>
    <string name="appmode_txt">AppMode</string>
    <string name="style_cat">STYLE</string>
    <string name="our_app_cat">OUR APP</string>
    <string name="about_app_txt">About App</string>
    <string name="share_app_txt">Share App</string>
</resources>