<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SettingRoot"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:context=".SettingsFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/general_cat" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#5E5E5B5B"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/SearchEngineTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/searchengine_txt" />

            <Spinner
                android:id="@+id/SearchEngineSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/SearchEngineSpinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LanguageTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/language_txt" />

            <Spinner
                android:id="@+id/LanguageSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/LanguageSpinner"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/style_cat"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#5E5E5B5B"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FontSizeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/fontsize_txt" />

            <SeekBar
                android:id="@+id/FontSizeSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:min="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/AppModeTxt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/appmode_txt" />

            <Switch
                android:id="@+id/ModeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/OurApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_app_cat"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#5E5E5B5B"/>
        <TextView
                android:id="@+id/AboutAppTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/about_app_txt"
                android:drawableLeft="@drawable/about_app_icon"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="5dp"/>
        <TextView
                android:id="@+id/ShareAppTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/share_app_txt"
                android:drawableLeft="@drawable/share_icon"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:drawablePadding="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebookShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/facebook_share"
            app:civ_border_width="2dp"
            app:civ_border_color="#ff000000"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/twitterShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/twitter_share"
            app:civ_border_width="2dp"
            app:civ_border_color="#ff000000"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/whatsappShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:civ_border_width="2dp"
            app:civ_border_color="#ff000000"
            android:src="@drawable/whatsapp_share"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>